2009-02-19  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	* src/home/hd-title-bar.c (hd_title_bar_set_window): If the client is
	NULL, remove the back and close button as well. Fixes: NB#102000
	* src/mb/hd-theme.c (hd_theme_create_decor): Return immediately if the
	client is undecorated.
	* src/mb/hd-dialog.c (hd_dialog_request_geometry): Leave at least
	title bar's worth of space on top of the dialog.

2009-02-19  Marc Ordinas i Llopis  <marc.ordinasillopis@collabora.co.uk>

	Avoid re-entering hd_render_manager_set_state if we came from there, the
	results are unspecified.

	* src/mb/hd-wm.c:

2009-02-19  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* src/home/hd-task-navigator.c (hd_task_navigator_add_dialog):
	  Don't abort on error but emulate g_return_if_fail in five lines of code.

2009-02-19  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Coverity warning fixes.

	* src/home/hd-clutter-cache.c (hd_clutter_cache_get_real_texture):
	Plug leaked filename_alloc in two error cases.
	* src/home/hd-render-manager.c (hd_render_manager_sync_clutter_befo):
	Fix coverity warning with HDRM_STATE_UNDEFINED.
	* src/mb/hd-comp-mgr.c (hd_comp_mgr_unregister_client): Fix coverity
	warning (app->leader is always non-NULL when app->stack_index >= 0
	holds).

2009-02-19  Gordon Williams <gordon.williams@collabora.co.uk>

	* src/home/hd-render-manager.c (hd_render_manager_update_blur_state):
	  Add HdWmClientTypeAppMenu to list of client types that cause blur
	  (for clock's popup window)	

2009-02-19  Marc Ordinas i Llopis  <marc.ordinasillopis@collabora.co.uk>

	Added misc debug output of prestarting process.

	* src/launcher/hd-app-mgr.c:

2009-02-19  Marc Ordinas i Llopis  <marc.ordinasillopis@collabora.co.uk>

	Removed checking for init_done signal before prestarting apps, as h-d
	wasn't getting it in time.

	* src/launcher/hd-app-mgr.c:

2009-02-19  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	NB#89949 -- removing another cool easter egg.