@@ -1,3 +1,10 @@
+2009-02-19  Marc Ordinas i Llopis  <marc.ordinasillopis@collabora.co.uk>
+
+	Remove check for being in a transition from HdSwitcher.
+	Fixes: NB#102568
+
+	* src/home/hd-switcher.c:
+
 2009-02-19  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>
 
 	* src/home/hd-title-bar.c (hd_title_bar_set_window): If the client is
